Moved secret credentails to ENV

--- a/thankyou.html
+++ b/thankyou.html
@@ -45,15 +45,15 @@
             margin: 10px 40px;
         }
     </style>
-    <title>Thank You for Contacting Digielevation!</title>
+    <title>Thank You for Contacting XYZ!</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Thank You for Contacting Digielevation!</h1>
+        <h1>Thank You for Contacting XYZ!</h1>
         <p>We appreciate your interest and will get back to you as soon as possible.</p>
-        <p>Best regards,<br>Digielevation Team</p>
-        <a href="https://digielevation.com" class="button">Visit Digielevation</a>
+        <p>Best regards,<br>XYZ Team</p>
+        <a href="https://xyz.com" class="button">Visit XYZ</a>
     </div>
 </body>
 
